--- a/Code/WorkSpeed.DesktopClient/Resources/Glyphs.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/Glyphs.xaml
@@ -32,5 +32,25 @@
                            c0.813,0.383,1.621,0.924,2.348,1.651C19.557,5.899,20.097,6.707,20.48,7.52z M4,4v16h16v-7l3-3.038V21c0,1.105-0.896,2-2,2H3  
                            c-1.104,0-2-0.895-2-2V3c0-1.104,0.896-2,2-2h11.01l-3.001,3H4z" />
 
+    <PathGeometry x:Key="g_ShiftSetupIcon" Figures="M 512 1248 v 192 q 0 40 -28 68 t -68 28 h -320 q -40 0 -68 -28 t -28 -68 v -192 q 0 -40 28 -68 t 68 -28 h 320 q 40 0 68 28 t 28 68 Z 
+                  m 0 -512 v 192 q 0 40 -28 68 t -68 28 h -320 q -40 0 -68 -28 t -28 -68 v -192 q 0 -40 28 -68 t 68 -28 h 320 q 40 0 68 28 t 28 68 Z 
+                  m 1280 512 v 192 q 0 40 -28 68 t -68 28 h -960 q -40 0 -68 -28 t -28 -68 v -192 q 0 -40 28 -68 t 68 -28 h 960 q 40 0 68 28 t 28 68 Z 
+                  m -1280 -1024 v 192 q 0 40 -28 68 t -68 28 h -320 q -40 0 -68 -28 t -28 -68 v -192 q 0 -40 28 -68 t 68 -28 h 320 q 40 0 68 28 t 28 68 Z 
+                  m 1280 512 v 192 q 0 40 -28 68 t -68 28 h -960 q -40 0 -68 -28 t -28 -68 v -192 q 0 -40 28 -68 t 68 -28 h 960 q 40 0 68 28 t 28 68 Z 
+                  m 0 -512 v 192 q 0 40 -28 68 t -68 28 h -960 q -40 0 -68 -28 t -28 -68 v -192 q 0 -40 28 -68 t 68 -28 h 960 q 40 0 68 28 t 28 68 Z" />
+
+    <PathGeometry x:Key="g_SetupIcon" Figures="M 22.2 14.4 L 21 13.7 c -1.3 -0.8 -1.3 -2.7 0 -3.5 l 1.2 -0.7 c 1 -0.6 1.3 -1.8 0.7 -2.7 l -1 -1.7 c -0.6 -1 -1.8 -1.3 -2.7 -0.7 
+                  L 18 5.1 c -1.3 0.8 -3 -0.2 -3 -1.7 V 2 c 0 -1.1 -0.9 -2 -2 -2 h -2 C 9.9 0 9 0.9 9 2 v 1.3 c 0 1.5 -1.7 2.5 -3 1.7 L 4.8 4.4 c -1 -0.6 -2.2 -0.2 -2.7 0.7 l -1 1.7 C 0.6 7.8 0.9 9 1.8 9.6 
+                  L 3 10.3 C 4.3 11 4.3 13 3 13.7 l -1.2 0.7 c -1 0.6 -1.3 1.8 -0.7 2.7 l 1 1.7 c 0.6 1 1.8 1.3 2.7 0.7 L 6 18.9 c 1.3 -0.8 3 0.2 3 1.7 
+                  V 22 c 0 1.1 0.9 2 2 2 h 2 c 1.1 0 2 -0.9 2 -2 v -1.3 c 0 -1.5 1.7 -2.5 3 -1.7 l 1.2 0.7 c 1 0.6 2.2 0.2 2.7 -0.7 l 1 -1.7 C 23.4 16.2 23.1 15 22.2 14.4 Z 
+                  M 12 16 c -2.2 0 -4 -1.8 -4 -4 c 0 -2.2 1.8 -4 4 -4 s 4 1.8 4 4 C 16 14.2 14.2 16 12 16 Z" />
+
+    <PathGeometry x:Key="g_ActionsIcon" Figures="M 384 432 c 0 5.563 0.938 10.859 2.281 16 H 384 h -64 H 160 c 0 17.672 -14.328 32 -32 32 s -32 -14.328 -32 -32 
+                  H 48 c -8.836 0 -16 -7.156 -16 -16 v -16 c 0 -8.844 7.164 -16 16 -16 h 283.078 l 32.016 -138.766 C 365.969 248.797 377.031 240 389.781 240 h 5.344 l 44.172 -123.891 
+                  C 434.813 110.609 432 103.656 432 96 c 0 -17.672 14.328 -32 32 -32 s 32 14.328 32 32 c 0 15.875 -11.594 28.969 -26.781 31.469 
+                  L 429.094 240 H 432 c 8.844 0 16 7.156 16 16 v 112 C 412.719 368 384 396.703 384 432 Z M 448 384 c -26.516 0 -48 21.484 -48 48 s 21.484 48 48 48 s 48 -21.484 48 -48 
+                  S 474.516 384 448 384 Z M 448 448.797 c -9.281 0 -16.797 -7.516 -16.797 -16.797 s 7.516 -16.797 16.797 -16.797 s 16.797 7.516 16.797 16.797 S 457.281 448.797 448 448.797 Z 
+                  M 64 344 V 184 c 0 -22.094 17.906 -40 40 -40 h 72 v 48 l 16 -16 l 16 16 v -48 h 72 c 22.094 0 40 17.906 40 40 v 160 c 0 22.094 -17.906 40 -40 40 H 104 C 81.906 384 64 366.094 64 344 Z 
+                  M 200.797 256 H 224 v 32 h 16 v -32 h 23.203 l -31.211 -38.406 L 200.797 256 Z M 128 320 v 16 h 128 v -16 H 128 Z M 120.797 256 H 144 v 32 h 16 v -32 h 23.203 l -31.211 -38.406 L 120.797 256 Z" />
 
 </ResourceDictionary>
