--- a/Code/WorkSpeed.DesktopClient/Resources/HeaderContentControlStyles.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/HeaderContentControlStyles.xaml
@@ -8,6 +8,7 @@
         <Setter Property="Margin" Value="5,5,5,20" />
         <Setter Property="HorizontalAlignment" Value="Center" />
         <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="Background" Value="{StaticResource br_MainWindow.Background}" />
         <Setter Property="TextElement.FontSize" Value="14" />
         <Setter Property="TextElement.FontFamily" Value="{StaticResource ft_NotoSerif}" />
         <Setter Property="TextElement.Foreground" Value="{StaticResource br_MainWindow.BackgroundAlternative}" />
