--- a/Code/WorkSpeed.DesktopClient/Views/UserControls/ShiftSetup.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/UserControls/ShiftSetup.xaml
@@ -4,16 +4,50 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WorkSpeed.DesktopClient.Views.UserControls"
+             xmlns:uc="clr-namespace:WorkSpeed.DesktopClient.Views.UserControls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <StackPanel Orientation="Vertical" Grid.Row="1">
-            <Expander Header="Дневная смена">
-                <uc:DayShift></uc:DayShift>
+    <Grid VerticalAlignment="Stretch"
+          >
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition Height="60" />
+        </Grid.RowDefinitions>
+        <StackPanel Orientation="Vertical" >
+            <Expander Header="Дневная смена"
+                      Background="{StaticResource br_MainWindow.Foreground}"
+                      Width="400"
+                      HorizontalAlignment="Center"
+                      Margin="5"
+                      >
+                <uc:DayShift />
             </Expander>
-            <Expander Header="Ночная смена">
-                <uc:NightShift></uc:NightShift>
+            <Expander Header="Ночная смена"
+                      Background="{StaticResource br_MainWindow.Foreground}"
+                      Width="400"
+                      HorizontalAlignment="Center"
+                      Margin="5,0"
+                      >
+                <uc:NightShift/>
             </Expander>
         </StackPanel>
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+
+            <Button Content="Выход" Width="80" Height="26"
+                    Command="{Binding BackwardCommand}"
+                    HorizontalAlignment="Center"
+                    Margin="80,0"
+            />
+
+            <Button Grid.Column="1" Content="Далее" Width="80" Height="26"
+                    Command="{Binding ForwardCommand}"
+                    HorizontalAlignment="Center"
+                    Margin="80,0"
+            />
+        </Grid>
     </Grid>
 </UserControl>
