--- a/Code/WorkSpeed.DesktopClient/Views/UserControls/ShiftSetup.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/UserControls/ShiftSetup.xaml
@@ -7,30 +7,32 @@
              xmlns:uc="clr-namespace:WorkSpeed.DesktopClient.Views.UserControls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+
     <Grid VerticalAlignment="Stretch"
           >
         <Grid.RowDefinitions>
             <RowDefinition />
             <RowDefinition Height="60" />
         </Grid.RowDefinitions>
-        <StackPanel Orientation="Vertical" >
-            <Expander Header="Дневная смена"
-                      Background="{StaticResource br_MainWindow.Foreground}"
-                      Width="400"
-                      HorizontalAlignment="Center"
-                      Margin="5"
-                      >
-                <uc:DayShift />
-            </Expander>
-            <Expander Header="Ночная смена"
-                      Background="{StaticResource br_MainWindow.Foreground}"
-                      Width="400"
-                      HorizontalAlignment="Center"
-                      Margin="5,0"
-                      >
-                <uc:NightShift/>
-            </Expander>
-        </StackPanel>
+
+        <ListBox ItemsSource="{Binding Shifts}" 
+                 Background="{StaticResource br_MainWindow.Background}"
+                 BorderBrush="{x:Null}"
+                 ScrollViewer.CanContentScroll="False"
+                 >
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Expander Header="{Binding Name}"
+                              Background="{StaticResource br_MainWindow.Foreground}"
+                              Margin="5"
+                              Width="550"
+                              >
+                        <uc:ShiftView />
+                    </Expander>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
