--- a/Code/WorkSpeed.DesktopClient/Views/UserControls/ShiftView.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/UserControls/ShiftView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="WorkSpeed.DesktopClient.Views.UserControls.DayShift"
+﻿<UserControl x:Class="WorkSpeed.DesktopClient.Views.UserControls.ShiftView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,12 +8,13 @@
              d:DesignHeight="450" d:DesignWidth="500">
 
     <StackPanel Style="{StaticResource st_HeaderContentControl.Container}"
-                    >
+                >
 
         <HeaderedContentControl Header="Наименование смены:">
             <TextBox Style="{StaticResource st_HeaderContentControl.Content}"
-                         MinWidth="100"
-                         >Дневная смена</TextBox>
+                     MinWidth="100"
+                     Text="{Binding Name}"
+                     />
         </HeaderedContentControl>
 
         <HeaderedContentControl Header="Начало смены:"
@@ -23,9 +24,8 @@
                 <TextBox Style="{StaticResource st_HeaderContentControl.Content}"
                          MinWidth="24"
                          HorizontalContentAlignment="Center"
-                >
-                    8:00
-                </TextBox>
+                         Text="{Binding StartTime}"
+                         />
             </StackPanel>
         </HeaderedContentControl>
 
@@ -34,9 +34,8 @@
                 <TextBox Style="{StaticResource st_HeaderContentControl.Content}"
                          MinWidth="24"
                          HorizontalContentAlignment="Center"
-                         >
-                    12
-                </TextBox>
+                         Text="{Binding Duration}"
+                         />
                 <TextBlock Style="{StaticResource st_HeaderContentControl.Header}" Text=" час." />
             </StackPanel>
         </HeaderedContentControl>
@@ -46,14 +45,22 @@
                 <TextBox Style="{StaticResource st_HeaderContentControl.Content}"
                          MinWidth="24"
                          HorizontalContentAlignment="Center"
-                         >
-                    30
-                </TextBox>
+                         Text="{Binding LunchDuration}"
+                         />
                 <TextBlock Style="{StaticResource st_HeaderContentControl.Header}" Text=" мин." />
             </StackPanel>
         </HeaderedContentControl>
 
-
+        <HeaderedContentControl Header="Длительность остальных перерывов:">
+            <StackPanel Orientation="Horizontal">
+                <TextBox Style="{StaticResource st_HeaderContentControl.Content}"
+                         MinWidth="24"
+                         HorizontalContentAlignment="Center"
+                         Text="{Binding RestTime}"
+                />
+                <TextBlock Style="{StaticResource st_HeaderContentControl.Header}" Text=" мин." />
+            </StackPanel>
+        </HeaderedContentControl>
 
     </StackPanel>
 </UserControl>
