--- a/Code/WorkSpeed.DesktopClient/Views/UserControls/BreakSetup.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/UserControls/BreakSetup.xaml
@@ -6,141 +6,64 @@
              xmlns:local="clr-namespace:WorkSpeed.DesktopClient.Views.UserControls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="500">
+
     <StackPanel Style="{StaticResource st_HeaderContentControl.Container}"
+                TextElement.Foreground="{StaticResource br_MainWindow.BackgroundAlternative}"
                 >
-        <GroupBox Margin="0,10">
-            <GroupBox.Header>
-                <TextBlock Foreground="{StaticResource br_MainWindow.Foreground}" 
-                               FontSize="11"
-                               FontWeight="Bold"
-                               Text="Короткие перерываы"
-                               />
-            </GroupBox.Header>
-            <StackPanel TextElement.Foreground="{StaticResource br_MainWindow.BackgroundAlternative}">
-                <HeaderedContentControl Header="Периодичность перерывов:">
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Style="{StaticResource st_HeaderContentControl.Header}" Text="1 перерыв в " />
-                        <TextBox Style="{StaticResource st_HeaderContentControl.Content}"
+
+        <!-- Interval -->
+        <HeaderedContentControl Header="Периодичность перерывов:">
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Style="{StaticResource st_HeaderContentControl.Header}" Text="1 перерыв в " />
+                <TextBox Style="{StaticResource st_HeaderContentControl.Content}"
                                  MinWidth="24"
                                  HorizontalContentAlignment="Center"
-                                 >
-                            2
-                        </TextBox>
-                        <TextBlock Style="{StaticResource st_HeaderContentControl.Header}" Text=" час(а)" />
-                    </StackPanel>
-                </HeaderedContentControl>
-                <HeaderedContentControl Header="Длительность перерыва:">
-                    <StackPanel Orientation="Horizontal">
-                        <TextBox Style="{StaticResource st_HeaderContentControl.Content}"
-                                     MinWidth="24"
-                                     HorizontalContentAlignment="Center"
-                            >
-                            10
-                        </TextBox>
-                        <TextBlock Style="{StaticResource st_HeaderContentControl.Header}" Text=" мин." />
-                    </StackPanel>
-                </HeaderedContentControl>
-                <HeaderedContentControl Header="Начало перерывов:">
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Style="{StaticResource st_HeaderContentControl.Header}" Text="за " />
-                        <TextBox Style="{StaticResource st_HeaderContentControl.Content}"
-                                     MinWidth="24"
-                                     HorizontalContentAlignment="Center"
-                            >
-                            5
-                        </TextBox>
-                        <TextBlock Style="{StaticResource st_HeaderContentControl.Header}" Text=" мин. до конца периода" />
-                    </StackPanel>
-                </HeaderedContentControl>
+                                 Text="{Binding Interval}"
+                                 />
+                <TextBlock Style="{StaticResource st_HeaderContentControl.Header}" Text=" час(а)" />
             </StackPanel>
-        </GroupBox>
+        </HeaderedContentControl>
 
-        <StackPanel  >
-            <CheckBox x:Name="mCheckBox"
-                          Margin="10,0"
-                          BorderThickness="15,15,2,2"
+        <!-- Duration -->
+        <HeaderedContentControl Header="Длительность перерыва:">
+            <StackPanel Orientation="Horizontal">
+                <TextBox Style="{StaticResource st_HeaderContentControl.Content}"
+                                 MinWidth="24"
+                                 HorizontalContentAlignment="Center"
+                                 Text="{Binding Duration}"
+                                 />
+                <TextBlock Style="{StaticResource st_HeaderContentControl.Header}" Text=" мин." />
+            </StackPanel>
+        </HeaderedContentControl>
+
+        <!-- IsForSmokers -->
+        <HeaderedContentControl Header="Только для курящих:" Margin="0,9,0,6">
+            <StackPanel Orientation="Horizontal">
+                <CheckBox x:Name="mCheckBox"
+                          Margin="0,0,0,2"
+                          BorderThickness="15,15,2,7"
                           BorderBrush="{StaticResource br_MainWindow.BackgroundAlternative}"
-                          >
-                <TextBlock Text="Отдельные перекуры для курящих" Margin="5,0" 
-                               FontSize="11" 
-                               FontWeight="Bold"
-                               Foreground="{StaticResource br_MainWindow.BackgroundAlternative}"
-                               />
-            </CheckBox>
+                          Foreground="{StaticResource br_MainWindow.BackgroundAlternative}"
+                          VerticalAlignment="Center"  
+                          IsChecked="{Binding IsForSmokers}"
+                          Command="{Binding Content.SwitchIsForSmokerCommand, 
+                                    RelativeSource={RelativeSource FindAncestor, 
+                                    AncestorType=ContentControl, 
+                                    AncestorLevel=7}}"
+                          CommandParameter="{Binding}"
+                          />
+            </StackPanel>
+        </HeaderedContentControl>
 
-            <GroupBox Margin="0,10" IsEnabled="{Binding ElementName=mCheckBox, Path=IsChecked}">
-                <GroupBox.Header>
-                    <TextBlock Foreground="{StaticResource br_MainWindow.Foreground}" 
-                                   FontSize="11"
-                                   FontWeight="Bold"
-                                   Text="Короткие перерываы для курящих"
-                                   />
-                </GroupBox.Header>
-                <StackPanel TextElement.Foreground="{StaticResource br_MainWindow.BackgroundAlternative}"
-                            Opacity=".5"
-                            >
-                    <HeaderedContentControl Header="Периодичность перерывов:">
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock Style="{StaticResource st_HeaderContentControl.Header}" Text="1 перерыв в " />
-                            <TextBox Style="{StaticResource st_HeaderContentControl.Content}"
-                                         MinWidth="24"
-                                         HorizontalContentAlignment="Center"
-                                        >
-                                1
-                            </TextBox>
-                            <TextBlock Style="{StaticResource st_HeaderContentControl.Header}" Text=" час(а)" />
-                        </StackPanel>
-                    </HeaderedContentControl>
-                    <HeaderedContentControl Header="Длительность перерыва:">
-                        <StackPanel Orientation="Horizontal">
-                            <TextBox Style="{StaticResource st_HeaderContentControl.Content}"
-                                         MinWidth="24"
-                                         HorizontalContentAlignment="Center"
-                                         >
-                                5
-                            </TextBox>
-                            <TextBlock Style="{StaticResource st_HeaderContentControl.Header}" Text=" мин." />
-                        </StackPanel>
-                    </HeaderedContentControl>
-                    <HeaderedContentControl Header="Начало перерывов:">
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock Style="{StaticResource st_HeaderContentControl.Header}" Text="за " />
-                            <TextBox Style="{StaticResource st_HeaderContentControl.Content}"
-                                         MinWidth="24"
-                                         HorizontalContentAlignment="Center"
-                                         >
-                                5
-                            </TextBox>
-                            <TextBlock Style="{StaticResource st_HeaderContentControl.Header}" Text=" мин. до конца периода" />
-                        </StackPanel>
-                    </HeaderedContentControl>
-                    <StackPanel.Style>
-
-                        <Style TargetType="StackPanel">
-                            <Style.Triggers>
-                                <Trigger Property="IsEnabled" Value="False">
-                                    <Trigger.EnterActions>
-                                        <BeginStoryboard>
-                                            <Storyboard>
-                                                <DoubleAnimation Storyboard.TargetProperty="Opacity" To="0.5" Duration="0:0:0.4" />
-                                            </Storyboard>
-                                        </BeginStoryboard>
-                                    </Trigger.EnterActions>
-                                    <Trigger.ExitActions>
-                                        <BeginStoryboard>
-                                            <Storyboard>
-                                                <DoubleAnimation Storyboard.TargetProperty="Opacity" To="1" Duration="0:0:0.4" />
-                                            </Storyboard>
-                                        </BeginStoryboard>
-                                    </Trigger.ExitActions>
-                                </Trigger>
-                            </Style.Triggers>
-                        </Style>
-                    </StackPanel.Style>
-                </StackPanel>
-
-            </GroupBox>
-
-        </StackPanel>
+        <!-- Shift -->
+        <HeaderedContentControl Header="Привязка к смене:">
+            <StackPanel Orientation="Horizontal">
+                <TextBox Style="{StaticResource st_HeaderContentControl.Content}"
+                                 MinWidth="50"
+                                 HorizontalContentAlignment="Center"
+                                 Text="{Binding ShiftName}"
+                                 />
+            </StackPanel>
+        </HeaderedContentControl>
     </StackPanel>
 </UserControl>
