--- a/Code/WorkSpeed.DesktopClient/Resources/DataTemplates.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/DataTemplates.xaml
@@ -157,4 +157,31 @@
     <!-- _________________ Categories And Threshold _________________ -->
 
 
+    <DataTemplate x:Key="dt_CategoriesThreshold">
+        <Grid Width="Auto" Height="Auto" Margin="5" 
+              HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+        >
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="0.1*" MinHeight="50" />
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+
+            <Border Margin="10,5" Height="Auto">
+                <TextBlock FontSize="24"
+                           HorizontalAlignment="Center"
+                           FontWeight="DemiBold"
+                           Foreground="{StaticResource br_MainWindow.BackgroundAlternative}"
+                           Text="{Binding Header}"
+                />
+            </Border>
+
+
+            <uc:EmployeeTable Grid.Row="1" />
+
+        </Grid>
+    </DataTemplate>
+
+
 </ResourceDictionary>
