-ref tests, data template fot categories

--- a/Code/WorkSpeed.DesktopClient/Resources/DataTemplates.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/DataTemplates.xaml
@@ -178,7 +178,7 @@
             </Border>
 
 
-            <uc:EmployeeTable Grid.Row="1" />
+            <uc:CategoriesThreshold Grid.Row="1" />
 
         </Grid>
     </DataTemplate>
