--- a/Code/WorkSpeed.DesktopClient/Views/UserControls/CategoriesThreshold.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/UserControls/CategoriesThreshold.xaml
@@ -38,7 +38,7 @@
                                      />
                             <TextBox Grid.Column="1" 
                                      Style="{StaticResource st_HeaderContentControl.Content}"
-                                     FontWeight="Bold"
+                                     FontWeight="Normal"
                                      Text="{Binding Name}"
                                      />
                             <TextBox Grid.Column="2" Margin="20,0" 
@@ -52,20 +52,26 @@
                 </ListBox.ItemTemplate>
             </ListBox>
 
-            <HeaderedContentControl Header="Длительность смены:" 
-                                    FontSize="14"
-                                    Margin="0,40"
-                                    >
-                <StackPanel Orientation="Horizontal">
-                    <TextBox Style="{StaticResource st_HeaderContentControl.Content}"
-                             MinWidth="24"
-                             HorizontalContentAlignment="Center"
-                             Text="{Binding Threshold}"
-                             FontSize="14"
-                             FontWeight="Bold"
-                             />
-                </StackPanel>
-            </HeaderedContentControl>
+
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
+                        Margin="0,40"
+                        >
+                <TextBlock Style="{StaticResource st_HeaderContentControl.Header}"
+                           Text="Допустимый промежуток между действиями:" 
+                           FontSize="14"
+                           FontWeight="Bold"
+                           Foreground="{StaticResource br_MainWindow.BackgroundAlternative}"
+                           />
+                <TextBox Style="{StaticResource st_HeaderContentControl.Content}"
+                         Margin="5,0,0,0"
+                            MinWidth="24"
+                            HorizontalContentAlignment="Center"
+                            Text="{Binding Threshold}"
+                            FontSize="14"
+                            FontWeight="Bold"
+                            />
+            </StackPanel>
+
 
         </StackPanel>
 
