--- a/Code/WorkSpeed.DesktopClient/Views/UserControls/EmployeeTable.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/UserControls/EmployeeTable.xaml
@@ -7,9 +7,13 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="1000">
 
-    <StackPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="60" />
+        </Grid.RowDefinitions>
+
         <DataGrid ItemsSource="{Binding Employees}"
-                  VerticalAlignment="Top"
                   Style="{StaticResource st_EmployeeDataGrid}"
                   >
             <DataGrid.Columns>
@@ -46,10 +50,10 @@
                                                 CanUserSort="True"
                                                 />
                 <DataGridTemplateColumn Header="Ранг" 
-                                                MinWidth="180"
-                                                CellTemplate="{StaticResource dt_ComboBox.Ranks}"
-                                                SortMemberPath="Rank" 
-                                                CanUserSort="True"
+                                        MinWidth="180"
+                                        CellTemplate="{StaticResource dt_ComboBox.Ranks}"
+                                        SortMemberPath="Rank" 
+                                        CanUserSort="True"
                                                 />
                 <DataGridTemplateColumn Header="Курит" Width="70"
                                     CellTemplate="{StaticResource dt_IsSmoker}"
@@ -60,7 +64,7 @@
             </DataGrid.Columns>
         </DataGrid>
 
-        <Grid Height="60">
+        <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition />
@@ -78,5 +82,5 @@
                         Margin="80,0"
                         />
         </Grid>
-    </StackPanel>
+    </Grid>
 </UserControl>
